# ai-eval

./: .gitignore  pyproject.toml  readme.md  requirements.txt
ai_eval/: __main__.py
docs/: howitworks.py
evaluators/: base.py  image_classification.py  object_detection.py  segmentation.py  speech_recognition.py  text_analysis.py
