[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-eval"
version = "0.1.0"
description = "Unified evaluation CLI for image, text, speech, detection, segmentation"
authors = [{ name = "Kh1606" }]
dependencies = [
    "rich",
    "ultralytics",
    "torch",
    "opencv-python-headless",
    "pandas",
    "numpy",
    "matplotlib"
]

[project.scripts]
ai-eval = "ai_eval.__main__:main"

# ── NEW: limit package discovery to code folders only ─────────────
[tool.setuptools.packages.find]
include = ["ai_eval", "evaluators"]
exclude = ["data*", "models*"]   # optional: keep non-code dirs out
